- updated mirage data - found jsonp documentation https://redmine.mozy.lab.emc.com//issues.json?limit=100&key=3b99b481e065d2de907ed09a1ec98b3826a05575&callback=ember - overflow:hidden for cards

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -64,7 +64,8 @@ section { padding-top: 0.3rem; }
 		padding: 1rem;
 		margin-bottom: 1rem;
 		min-height: 14rem;
-		transition: border 0.25s; }
+		transition: border 0.25s;
+		overflow: hidden; }
 .card:hover { border: 1px solid #cc0000; }
 .card .card-prominent {
 	font-size: 1.6rem;
